--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
    # url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/CV_Dhiraj_Web.pdf
     
   # - title: "Gallery"
    # url: /moments/
